--- a/application/configs/routes.ini
+++ b/application/configs/routes.ini
@@ -1,5 +1,10 @@
 [production]
 
+routes.works.route = /livros
+routes.works.defaults.module = works
+routes.works.defaults.controller = index
+routes.works.defaults.action = index
+
 routes.explore.route = /explore/:uri
 routes.explore.defaults.module = works
 routes.explore.defaults.controller = edition
