#7 refactoring around table rows

--- a/application/configs/routes.ini
+++ b/application/configs/routes.ini
@@ -16,4 +16,9 @@ routes.home.defaults.module = default
 routes.home.defaults.controller = index
 routes.home.defaults.action = index
 
+routes.login.route = /login
+routes.login.defaults.module = auth
+routes.login.defaults.controller = login
+routes.login.defaults.action = index
+
 
