--- a/application/configs/routes.ini
+++ b/application/configs/routes.ini
@@ -21,4 +21,9 @@ routes.login.defaults.module = auth
 routes.login.defaults.controller = login
 routes.login.defaults.action = index
 
+routes.blog.route = /novidades
+routes.blog.defaults.module = blog
+routes.blog.defaults.controller = index
+routes.blog.defaults.action = index
+
 
