--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@ application/Bootstrap.php
 application/configs/application.ini
 public/index.php
 
+library/Moxca
+
 /nbproject/**/* 
 /tests/log/**/*
 /nbproject/
