--- a/application/configs/routes.ini
+++ b/application/configs/routes.ini
@@ -26,4 +26,8 @@ routes.blog.defaults.module = blog
 routes.blog.defaults.controller = index
 routes.blog.defaults.action = index
 
-
+routes.post.route = /novidades/:uri
+routes.post.defaults.module = blog
+routes.post.defaults.controller = post
+routes.post.defaults.action = explore
+routes.serie.defaults.uri = biografia
