--- a/application/configs/routes.ini
+++ b/application/configs/routes.ini
@@ -5,6 +5,12 @@ routes.works.defaults.module = works
 routes.works.defaults.controller = index
 routes.works.defaults.action = index
 
+routes.works-theme.route = /livros/tema/:theme
+routes.works-theme.defaults.module = works
+routes.works-theme.defaults.controller = index
+routes.works-theme.defaults.action = index
+routes.explore.defaults.theme = turma
+
 routes.explore.route = /explore/:uri
 routes.explore.defaults.module = works
 routes.explore.defaults.controller = edition
