--- a/application/configs/routes.ini
+++ b/application/configs/routes.ini
@@ -5,17 +5,48 @@ routes.works.defaults.module = works
 routes.works.defaults.controller = index
 routes.works.defaults.action = index
 
-routes.works-theme.route = /livros/tema/:theme
-routes.works-theme.defaults.module = works
-routes.works-theme.defaults.controller = index
-routes.works-theme.defaults.action = index
-routes.explore.defaults.theme = turma
-
 routes.explore.route = /explore/:uri
 routes.explore.defaults.module = works
 routes.explore.defaults.controller = edition
 routes.explore.defaults.action = explore
 routes.explore.defaults.uri = marcelo-martelo-marmelo
+
+routes.works-theme.route = /livros/tema/:theme
+routes.works-theme.defaults.module = works
+routes.works-theme.defaults.controller = index
+routes.works-theme.defaults.action = index
+routes.works-theme.defaults.theme = turma
+
+routes.infant.route = /livros/ate-3-anos
+routes.infant.defaults.module = works
+routes.infant.defaults.controller = index
+routes.infant.defaults.action = index
+routes.infant.defaults.type = 1000
+
+routes.preschooler.route = /livros/de-4-a-6-anos
+routes.preschooler.defaults.module = works
+routes.preschooler.defaults.controller = index
+routes.preschooler.defaults.action = index
+routes.preschooler.defaults.type = 2000
+
+routes.kids.route = /livros/de-7-a-9-anos
+routes.kids.defaults.module = works
+routes.kids.defaults.controller = index
+routes.kids.defaults.action = index
+routes.kids.defaults.type = 3000
+
+routes.tween.route = /livros/de-10-a-13-anos
+routes.tween.defaults.module = works
+routes.tween.defaults.controller = index
+routes.tween.defaults.action = index
+routes.tween.defaults.type = 4000
+
+routes.teen.route = /livros/acima-de-13-anos
+routes.teen.defaults.module = works
+routes.teen.defaults.controller = index
+routes.teen.defaults.action = index
+routes.teen.defaults.type = 5000
+
 
 routes.home.route = /home
 routes.home.defaults.module = default
