filter editions by character

--- a/application/configs/routes.ini
+++ b/application/configs/routes.ini
@@ -17,6 +17,12 @@ routes.works-theme.defaults.controller = index
 routes.works-theme.defaults.action = index
 routes.works-theme.defaults.theme = turma
 
+routes.works-character.route = /livros/personagem/:character
+routes.works-character.defaults.module = works
+routes.works-character.defaults.controller = index
+routes.works-character.defaults.action = index
+routes.works-character.defaults.character = turma
+
 routes.infant.route = /livros/ate-3-anos
 routes.infant.defaults.module = works
 routes.infant.defaults.controller = index
