editions of serie

--- a/application/configs/routes.ini
+++ b/application/configs/routes.ini
@@ -17,6 +17,12 @@ routes.works-theme.defaults.controller = index
 routes.works-theme.defaults.action = index
 routes.works-theme.defaults.theme = turma
 
+routes.works-serie.route = /serie/:serie
+routes.works-serie.defaults.module = works
+routes.works-serie.defaults.controller = index
+routes.works-serie.defaults.action = index
+routes.works-serie.defaults.serie = serie
+
 routes.works-character.route = /livros/personagem/:character
 routes.works-character.defaults.module = works
 routes.works-character.defaults.controller = index
