ajustes busca e outras coisas...

--- a/application/configs/routes.ini
+++ b/application/configs/routes.ini
@@ -5,7 +5,7 @@ routes.works.defaults.module = works
 routes.works.defaults.controller = index
 routes.works.defaults.action = index
 
-routes.explore.route = /explore/:uri
+routes.explore.route = /livro/:uri
 routes.explore.defaults.module = works
 routes.explore.defaults.controller = edition
 routes.explore.defaults.action = explore
