--- a/application/configs/routes.ini
+++ b/application/configs/routes.ini
@@ -75,6 +75,12 @@ routes.blog.defaults.module = blog
 routes.blog.defaults.controller = index
 routes.blog.defaults.action = index
 
+routes.category.route = /novidades-em/:category
+routes.category.defaults.module = blog
+routes.category.defaults.controller = index
+routes.category.defaults.action = category
+routes.category.defaults.category = agenda
+
 routes.post.route = /novidades/:uri
 routes.post.defaults.module = blog
 routes.post.defaults.controller = post
