--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,5 @@ library/Zend
 /application/_Bootstrap_staging.php
 /public/js/jquery.pajinate.min.js
 /public/js/jquery.pajinate.js
+/public/js/shadowbox/
+/public/css/shadowbox.css
